<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/ill_register"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/ic_sign_up_ill"
        android:padding="@dimen/standardMargin_X2"
        android:layout_margin="@dimen/standardMargin"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <com.github.florent37.shapeofview.shapes.ArcView
        android:id="@+id/arcView_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:shape_arc_height="30dp"
        app:shape_arc_position="top">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/authenthication_main"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">


            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standardMargin"
                style="@style/authentication_btn"
                android:background="@drawable/et_background_login"
                android:hint="@string/full_name"
                android:drawableTint="#C9CCCC"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/authentication_btn"
                android:background="@drawable/et_background_login"
                android:hint="@string/email"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/authentication_btn"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:background="@drawable/et_background_login"
                android:hint="@string/password"
                android:inputType="textPassword" />



            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="@dimen/standardMargin_X2"
                android:layout_marginStart="@dimen/standardMargin_X2"
                android:background="@drawable/bt_background_authentication"
                android:text="@string/login"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="@color/colorWhite" />


            <Button
                android:id="@+id/bt_link_to_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:background="@null"
                android:text="@string/btn_link_to_register"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="15dp" />

        </LinearLayout>


    </com.github.florent37.shapeofview.shapes.ArcView>

</androidx.constraintlayout.widget.ConstraintLayout>