<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="userViewModel"
            type="com.example.psnews.viewmodel.UserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context=".view.Profile">

        <LinearLayout
            android:id="@+id/lin_loading_dim"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#A6000000"
            android:translationZ="100dp"
            android:visibility="invisible"
            android:gravity="center">

            <ImageView
                android:id="@+id/loading"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="@dimen/standardMargin"
                android:padding="@dimen/standardMargin_X2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/loading_anim" />

        </LinearLayout>

        <com.github.florent37.shapeofview.shapes.ArcView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:elevation="@dimen/smallMargin"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shape_roundRect_bottomLeftRadius="180dp"
            app:shape_roundRect_bottomRightRadius="180dp"
            app:shape_arc_height="30dp"
            app:shape_arc_position="bottom">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/authenthication_secoundry">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civ_profile"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/standardMargin_X2"
                    app:civ_border_color="@color/colorWhite"
                    app:civ_border_width="1dp"
                    bind:imgaeProfileUrl="@{userViewModel.userAvatar}"
                    bind:context="@{userViewModel.context}"
                    app:civ_circle_background_color="@color/colorWhite"
                    android:src="@drawable/ic_person_black_24dp" />


                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="@dimen/standardMargin_X2"
                    android:layout_marginTop="@dimen/standardMargin_X2"
                    android:background="@drawable/back_background"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingStart="@dimen/standardMargin"
                    android:paddingTop="@dimen/smallMargin"
                    android:paddingEnd="@dimen/standardMargin"
                    android:paddingBottom="@dimen/smallMargin"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/standardTextSize_18"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_back" />

                <TextView
                    android:id="@+id/tv_profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/civ_profile"
                    android:layout_margin="@dimen/standardMargin"
                    android:gravity="center"
                    android:maxLines="1"
                    android:minLines="1"
                    android:text="@{userViewModel.name}"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/standardTextSize_16"
                    android:textStyle="bold"
                    tools:text="@string/dummy_profile_name" />

                <TextView
                    android:id="@+id/tv_profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_profile_name"
                    android:layout_marginStart="@dimen/standardMargin_X2"
                    android:layout_marginEnd="@dimen/standardMargin_X2"
                    android:gravity="center"
                    android:maxLines="1"
                    android:minLines="1"
                    android:text="@{userViewModel.email}"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/standardTextSize_16"
                    android:textStyle="bold"
                    tools:text="@string/dummy_profile_email" />

            </RelativeLayout>

        </com.github.florent37.shapeofview.shapes.ArcView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.30" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.40" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standardMargin_X2"
            android:layout_marginEnd="@dimen/standardMargin_X2"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="@dimen/standardMargin_X2"
            app:cardElevation="@dimen/standardMargin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline2">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_edit_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/standardMargin_X2"
                    android:layout_marginEnd="@dimen/standardMargin"
                    android:layout_marginStart="@dimen/standardMargin_X2"
                    android:layout_marginTop="@dimen/standardMargin_X2"
                    android:text="@string/edit_profile"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/standardTextSize_15"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/tv_edit_profile"
                    android:layout_toEndOf="@id/tv_edit_profile"
                    android:fontFamily="@font/fontello"
                    android:text=""
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/standardTextSize_15"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_editName_profile"
                    style="@style/authentication_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_edit_profile"
                    android:layout_marginTop="@dimen/standardMargin"
                    app:drawableTint="@color/gray400"
                    android:background="@drawable/et_background_login"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:text="@{userViewModel.name}"
                    android:hint="@string/full_name"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/gray500" />

                <EditText
                    android:id="@+id/et_editemail_profile"
                    style="@style/authentication_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_editName_profile"
                    android:background="@drawable/et_background_login"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:text="@{userViewModel.email}"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/gray500" />

                <Button
                    android:id="@+id/btn_save_profile"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_editemail_profile"
                    android:layout_alignParentEnd="true"
                    app:drawableTint="@color/colorWhite"
                    app:backgroundTint="@color/authenthication_secoundry"
                    android:layout_marginStart="@dimen/standardMargin_X2"
                    android:layout_marginTop="@dimen/standardMargin"
                    android:layout_marginEnd="@dimen/standardMargin_X2"
                    android:layout_marginBottom="@dimen/standardMargin"
                    android:drawableStart="@drawable/ic_check_black_24dp"
                    android:text="@string/save" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="@dimen/standardMargin_X2"
            android:layout_marginEnd="@dimen/standardMargin_X2"
            android:layout_marginStart="@dimen/standardMargin_X2"
            android:background="@drawable/bt_background_logout"
            android:text="@string/log_out"
            app:layout_constraintBottom_toBottomOf="parent"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/colorWhite" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>