<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="news"
            type="com.example.psnews.viewmodel.MainNewsViewModel" />

    </data>

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/news_item"
        android:layout_marginTop="@dimen/standardMargin_X2"
        android:layout_marginStart="@dimen/standardMargin"
        android:layout_marginEnd="@dimen/standardMargin"
        app:cardPreventCornerOverlap="false"
        app:cardCornerRadius="@dimen/standardMargin"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardElevation="@dimen/standardMargin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/news_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standardMargin"
                android:layout_marginTop="100dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:minLines="1"
                android:textDirection="ltr"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/standardTextSize_14"
                android:textStyle="bold"
                android:text="@={news.title}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/dummy_title" />

            <TextView
                android:id="@+id/news_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standardMargin"
                android:ellipsize="end"
                android:maxLines="1"
                android:minLines="1"
                android:singleLine="true"
                android:text="@={news.author}"
                android:textColor="@color/gray800"
                android:textSize="@dimen/standardTextSize_10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/news_title"
                tools:text="@string/dummy_author" />

            <TextView
                android:id="@+id/news_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standardMargin"
                android:layout_marginTop="@dimen/standardMargin"
                android:ellipsize="end"
                android:maxLines="1"
                android:minLines="1"
                android:text="@={news.date}"
                android:singleLine="true"
                android:textColor="@color/gray800"
                android:textSize="@dimen/standardTextSize_10"
                app:layout_constraintStart_toEndOf="@+id/news_author"
                app:layout_constraintTop_toBottomOf="@+id/news_title"
                tools:text="@string/dummy_date" />


            <com.github.florent37.shapeofview.shapes.RoundRectView
                android:id="@+id/roundRectView"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@color/colorBlack"
                android:layout_marginTop="@dimen/standardMargin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/news_date"
                app:layout_constraintVertical_bias="0.0"
                app:shape_roundRect_borderColor="@android:color/black"
                app:shape_roundRect_bottomLeftRadius="8dp"
                app:shape_roundRect_bottomRightRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:orientation="vertical"
                    android:gravity="center">

                    <LinearLayout
                        android:id="@+id/lin_image_seperator"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_gravity="top"
                        android:orientation="vertical"
                        android:background="@color/gray800"/>

                    <ImageView
                        android:id="@+id/news_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="center"
                        android:src="@drawable/ic_camera"
                        bind:context="@{news.context}"
                        bind:imgaeUrl="@{news.imageUrl}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/iv_Faverate_expand"
                        app:layout_constraintVertical_bias="0.0" />

                </LinearLayout>

            </com.github.florent37.shapeofview.shapes.RoundRectView>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>